@@ -5,6 +5,7 @@ requests from users, including:
   Guiseppe Antonaci
   Vincent Arel-Bundock
   Pedro Luis Baldoni
+  Joel Barnes
   Robert Baskin
   Asia Bento
   Maciej Beręsewicz
